overflow x fixed

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
     font-family: "Xanh Mono", monospace;
     font-size: 12px;
     width: 100%;
-
+    overflow-x: hidden;
 }
 
 #background-gif{
